--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,24 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,600;1,700;1,900&family=Poppins:ital,wght@0,300;0,400;0,700;0,800;1,400;1,700&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,600;1,700;1,900&family=Poppins:ital,wght@0,300;0,400;0,700;0,800;1,400;1,700&display=swap");
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Heebo:wght@400;500;700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Scada:ital,wght@0,400;0,700;1,400;1,700&display=swap"); /*
+font-family: 'Cabin', sans-serif;
+font-family: 'Heebo', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Scada', sans-serif;
+*/
 
 @layer base {
   html,
   body {
     padding: 0;
     margin: 0;
-    @apply font-pt-sans;
+    @apply font-montserrat;
   }
 
-  /* a {
-    color: inherit;
-    text-decoration: none;
+  /**
+  TYPOGRAPH
+  */
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-heebo;
   }
 
-  * {
-    box-sizing: border-box;
-  } */
+  h1 {
+    @apply text-5xl;
+  }
+
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  h4 {
+    @apply text-2xl;
+  }
+  h5,
+  h6 {
+    @apply text-xl;
+  }
+
+  p {
+    @apply font-heebo;
+    font-weight: 500;
+  }
+  span {
+    @apply font-heebo;
+  }
+  a {
+    @apply font-heebo;
+  }
 }
 
 @layer components {
